--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="首页"
+            android:text="分类"
             android:textColor="@drawable/radiobutton_text_selector"
             android:id="@+id/main_rb_classify"
             android:gravity="center_horizontal"
@@ -44,7 +44,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="首页"
+            android:text="购物车"
             android:textColor="@drawable/radiobutton_text_selector"
             android:id="@+id/main_rb_shopping"
             android:gravity="center_horizontal"
@@ -55,7 +55,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="首页"
+            android:text="我的"
             android:gravity="center_horizontal"
             android:textColor="@drawable/radiobutton_text_selector"
             android:id="@+id/main_rb_user"
