--- a/app/src/main/res/layout/f_shouye.xml
+++ b/app/src/main/res/layout/f_shouye.xml
@@ -3,10 +3,146 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="#0080C0"
     android:layout_height="match_parent">
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="首页"
-        />
+
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+            viewpager无限轮播布局文件
+            <com.youth.banner.Banner
+                android:id="@+id/f_home_viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="220dp"/>
+            每日签到图片
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:orientation="horizontal"
+                >
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/f_home_dayImg"
+                    android:gravity="center_horizontal"
+                    />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/f_home_jifenImg"
+                    android:gravity="center_horizontal"
+                    />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/f_home_dhImg"
+                    android:gravity="center_horizontal"
+                    />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/f_home_tfImg"
+                    android:gravity="center_horizontal"
+                    />
+            </LinearLayout>
+            每日签到文字
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="每日签到"
+                    android:id="@+id/f_home_daydaycom"
+                    android:gravity="center_horizontal"
+
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="积分商城"
+                    android:id="@+id/f_home_djifen"
+                    android:gravity="center_horizontal"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="兑换专区"
+                    android:id="@+id/f_home_duihuan"
+                    android:gravity="center_horizontal"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="真伪查询"
+                    android:id="@+id/f_home_t_f"
+                    android:gravity="center_horizontal"
+                    />
+
+            </LinearLayout>
+            春季热销  水平RecycleView
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="热销商城"
+                android:gravity="center"
+                />
+
+           <android.support.v7.widget.RecyclerView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/f_home_recycle_horizontal"
+               ></android.support.v7.widget.RecyclerView>
+            商品展示  RecycleView类似多条目
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="热门专题"
+                android:gravity="center"
+                />
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/f_home_recycle_list"
+                ></android.support.v7.widget.RecyclerView>
+            商品展示  瀑布流的形式
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="热门推荐"
+                android:gravity="center"
+                />
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/f_home_recycle_grid"
+                android:gravity="center_horizontal"
+                ></android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
