--- a/app/src/main/res/layout/f_shoppingcar.xml
+++ b/app/src/main/res/layout/f_shoppingcar.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#FFFF00"
     android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
@@ -29,13 +28,21 @@
             android:layout_height="wrap_content"
             android:id="@+id/shopping_selectAll"
             android:layout_gravity="center_vertical"
-            android:button="@drawable/shoppingSelect_selector"
+            android:button="@drawable/shop_selector"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="  全选"
             />
         <ImageView
-            android:layout_width="150dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content" />
         <TextView
-            android:layout_width="50dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="合计:"
             android:layout_gravity="center_vertical"
@@ -48,6 +55,7 @@
             android:text="结算   "
             android:layout_gravity="right"
             android:id="@+id/shopping_count"
+            android:background="#FF6300"
 
             />
 
